--- a/toolproject/src/app/toolmanagement/components/dashboard/dashboard.component.html
+++ b/toolproject/src/app/toolmanagement/components/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-<p>dashboard works!</p>
+<app-tm-content>
+    <div class="content p-4">
+
+        <h2 class="mb-4">Dashboard</h2>
+
+        <div class="card mb-4">
+            <div class="card-body">
+                This is a Dashboard you can use as a starting point.
+            </div>
+        </div>
+    </div>
+</app-tm-content>
