--- a/toolproject/src/app/toolmanagement/components/dashboard/dashboard.component.html
+++ b/toolproject/src/app/toolmanagement/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 
         <div class="card mb-4">
             <div class="card-body">
-                This is a Dashboard you can use as a starting point.
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut recusandae, accusamus pariatur facilis at autem, odit sequi, magnam aliquid adipisci ducimus voluptas modi. Quidem, neque voluptates suscipit nobis fugiat cum!
             </div>
         </div>
     </div>
