add button Tool loan

--- a/toolproject/src/app/toolmanagement/components/loan/loan.component.html
+++ b/toolproject/src/app/toolmanagement/components/loan/loan.component.html
@@ -1,14 +1,13 @@
 <app-tm-content>
     <div class="content p-4">
 
-        <div class="title-title-w-btn">
-            <h2 class="title">Loan Tool and Equipment</h2>
-            <p>
-                <button type="button" class="btn btn-primary btn-pill">Default button</button>
-            </p>
+        <div class="row">
+            <div class="col-6"><h2 class="title">Loan Tool and Equipment</h2></div>
+            <div class="col-6"> <p><button type="button" class="btn btn-danger btn-pill" style="float: right;">Tool Loan</button></p>
         </div>
-
-        <div class="card mb-4">
+        </div>
+        
+        <div class="row card mb-4">
             <div class="card-body">
                 <table class="table table-hover" cellspacing="0" width="100%">
                     <thead>
@@ -40,5 +39,7 @@
                 </table>
             </div>
         </div>
+
+        
     </div>
 </app-tm-content>
