--- a/toolproject/src/app/toolmanagement/components/loan/loan.component.html
+++ b/toolproject/src/app/toolmanagement/components/loan/loan.component.html
@@ -2,11 +2,18 @@
     <div class="content p-4">
 
         <div class="row">
-            <div class="col-6"><h2 class="title">Loan Tool and Equipment</h2></div>
-            <div class="col-6"> <p><button type="button" class="btn btn-danger btn-pill" style="float: right;">Tool Loan</button></p>
+            <div class="col-6">
+                <h2 class="title">Loan Tool and Equipment</h2>
+            </div>
+            <div class="col-6">
+                <p>
+                    <button type="button" class="btn btn-danger btn-pill ml-2" style="float: right;" data-toggle="modal" data-target=".bd-example-modal-lg">Tool Loan</button>
+                    <button type="button" class="btn btn-success btn-pill" style="float: right;">Tool Return</button>
+                </p>
+
+            </div>
         </div>
-        </div>
-        
+
         <div class="row card mb-4">
             <div class="card-body">
                 <table class="table table-hover" cellspacing="0" width="100%">
@@ -20,11 +27,15 @@
                             <th>Qty</th>
                             <th>Aircraft</th>
                             <th>Engineer</th>
+                            <th>Store</th>
                             <th>Date</th>
+                            <th>Status</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
+                            <td>Test</td>
+                            <td>Test</td>
                             <td>Test</td>
                             <td>Test</td>
                             <td>Test</td>
@@ -40,6 +51,165 @@
             </div>
         </div>
 
-        
     </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Tool Loan</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="card mb-4">
+                        <div class="card-header bg-white font-weight-bold">
+                            Loan Information
+                        </div>
+                        <form [formGroup]="form" (submit)="onSubmit()">
+                            <div class="card-body">
+
+                                <div class="form-row">
+
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServerUsername">Employee ID :</label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text" id="inputGroupPrepend3">TL</span>
+                                            </div>
+                                            <input formControlName="eng_id" type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" aria-describedby="inputGroupPrepend3" required>
+                                            <div class="invalid-feedback">
+                                                Employee ID is Required
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServer01">Employee name :</label>
+                                        <input type="text" class="form-control is-valid" id="validationServer01" placeholder="First name" value="Mark" required disabled>
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="form-row">
+
+                                    <div class="col-md-6 mb-3">
+                                        <label for="exampleFormControlSelect1">Aircraft :</label>
+                                        <select class="form-control" id="exampleFormControlSelect1" formControlName="aircraft">
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServer03">Flight :</label>
+                                        <input type="text" class="form-control is-invalid" id="validationServer03" placeholder="SL-XXX" required formControlName="flight">
+                                    </div>
+
+
+                                </div>
+
+
+                            </div>
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary mr-0">Save changes</button>
+                            </div>
+                        </form>
+
+
+
+
+                    </div>
+
+                    <div class="card md-4" [style.display]="!isShow ? 'none':'block'">
+                        <div class="card-header bg-white font-weight-bold">
+                            Loan Tool Detail
+                        </div>
+                        <div class="card-body">
+                            <div class="form-row">
+                                <div class="input-group col-md-6 mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">Batch Number</span>
+                                    </div>
+                                    <input type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" aria-describedby="inputGroupPrepend3" required>
+                                    <div class="invalid-feedback">
+                                        Employee ID is Required
+                                    </div>
+                                </div>
+                            </div>
+                            <table class="table table-hover" cellspacing="0" width="100%">
+                                <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>Batch</th>
+                                        <th class="w-25">Description</th>
+                                        <th>Part Number</th>
+                                        <th>Serail Number</th>
+                                        <th>Qty</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                        <td>Test</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="reSetmodal()">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
 </app-tm-content>
