--- a/toolproject/src/app/toolmanagement/components/loan/loan.component.html
+++ b/toolproject/src/app/toolmanagement/components/loan/loan.component.html
@@ -7,7 +7,8 @@
             </div>
             <div class="col-6">
                 <p>
-                    <button type="button" class="btn btn-danger btn-pill ml-2" style="float: right;" data-toggle="modal" data-target=".bd-example-modal-lg">Tool Loan</button>
+                    <button type="button" class="btn btn-danger btn-pill ml-2" style="float: right;" data-toggle="modal"
+                        data-target=".bd-example-modal-lg">Tool Loan</button>
                     <button type="button" class="btn btn-success btn-pill" style="float: right;">Tool Return</button>
                 </p>
 
@@ -53,7 +54,8 @@
 
     </div>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -67,7 +69,7 @@
                         <div class="card-header bg-white font-weight-bold">
                             Loan Information
                         </div>
-                        <form [formGroup]="form" (submit)="onSubmit()">
+                        <form [formGroup]="form_header" (submit)="onSubmitHeader()">
                             <div class="card-body">
 
                                 <div class="form-row">
@@ -78,7 +80,9 @@
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text" id="inputGroupPrepend3">TL</span>
                                             </div>
-                                            <input formControlName="eng_id" type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" aria-describedby="inputGroupPrepend3" required>
+                                            <input formControlName="eng_id" type="text" class="form-control is-invalid"
+                                                id="validationServerUsername" placeholder="Username"
+                                                aria-describedby="inputGroupPrepend3" required>
                                             <div class="invalid-feedback">
                                                 Employee ID is Required
                                             </div>
@@ -86,7 +90,8 @@
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="validationServer01">Employee name :</label>
-                                        <input type="text" class="form-control is-valid" id="validationServer01" placeholder="First name" value="Mark" required disabled>
+                                        <input type="text" class="form-control is-valid" id="validationServer01"
+                                            formControlName="eng_name" placeholder="First name" required>
                                         <div class="valid-feedback">
                                             Looks good!
                                         </div>
@@ -97,7 +102,8 @@
 
                                     <div class="col-md-6 mb-3">
                                         <label for="exampleFormControlSelect1">Aircraft :</label>
-                                        <select class="form-control" id="exampleFormControlSelect1" formControlName="aircraft">
+                                        <select class="form-control" id="exampleFormControlSelect1"
+                                            formControlName="aircraft">
                                             <option>1</option>
                                             <option>2</option>
                                             <option>3</option>
@@ -108,17 +114,21 @@
 
                                     <div class="col-md-6 mb-3">
                                         <label for="validationServer03">Flight :</label>
-                                        <input type="text" class="form-control is-invalid" id="validationServer03" placeholder="SL-XXX" required formControlName="flight">
+                                        <input type="text" class="form-control is-invalid" id="validationServer03"
+                                            placeholder="SL-XXX" required formControlName="flight">
                                     </div>
 
 
                                 </div>
 
+                                <div class="row float-right mb-2">
+                                    <button type="submit" class="btn btn-primary"
+                                        [style.display]="!isShow ? 'block':'none'">Save changes</button>
+                                </div>
+
 
                             </div>
-                            <div class="card-footer">
-                                <button type="submit" class="btn btn-primary mr-0">Save changes</button>
-                            </div>
+
                         </form>
 
 
@@ -130,18 +140,22 @@
                         <div class="card-header bg-white font-weight-bold">
                             Loan Tool Detail
                         </div>
+
                         <div class="card-body">
-                            <div class="form-row">
-                                <div class="input-group col-md-6 mb-3">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="inputGroupPrepend3">Batch Number</span>
-                                    </div>
-                                    <input type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" aria-describedby="inputGroupPrepend3" required>
-                                    <div class="invalid-feedback">
-                                        Employee ID is Required
+                            <form [formGroup]="form_detail" (submit)="onSubmitDetail()">
+                                <div class="form-row">
+                                    <div class="input-group col-md-6 mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroupPrepend3">Batch Number</span>
+                                        </div>
+                                        <input type="text" class="form-control is-invalid" id="validationServerUsername"
+                                            placeholder="Username" aria-describedby="inputGroupPrepend3" required formControlName="batch">
+                                        <div class="invalid-feedback">
+                                            Batch Number ID is Required
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </form>
                             <table class="table table-hover" cellspacing="0" width="100%">
                                 <thead>
                                     <tr>
@@ -203,7 +217,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="reSetmodal()">Close</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal"
+                        (click)="reSetmodal()">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
