--- a/toolproject/src/app/toolmanagement/components/navbar/navbar.component.html
+++ b/toolproject/src/app/toolmanagement/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
                         class="fa fa-user"></i> John Doe</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd_user">
                     <a href="#" class="dropdown-item">Profile</a>
-                    <a href="#" class="dropdown-item">Logout</a>
+                    <a href="#" class="dropdown-item" (click)="onLogout()">Logout</a>
                 </div>
             </li>
         </ul>
