Backend Login verified (accessToken)

--- a/toolproject/src/app/components/login/login.component.html
+++ b/toolproject/src/app/components/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="container h-100">
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-md-4">
+            <img src="./assets/image/toolb.png" class="rounded mx-auto d-block" alt="logo" width="150">
             <h1 class="text-center mb-4">Tool Management</h1>
             <div class="card">
                 <div class="card-body">
