Fix Bug Login and Add Inventory Comp

--- a/toolproject/src/app/toolmanagement/components/sidebar/sidebar.component.html
+++ b/toolproject/src/app/toolmanagement/components/sidebar/sidebar.component.html
@@ -9,7 +9,9 @@
                 <li><a href="https://bootadmin.net/demo/base/colors">Tool Loan</a></li>
                 <li><a href="https://bootadmin.net/demo/base/typography">Tool Return</a></li>
             </ul>
+
         </li>
+        <li><a [routerLink]="['/', AppURL.Authen, tmURL.inventory]"  routerLinkActive="active"><i class="fa fa-fw fa-warehouse"></i> Inventory</a></li>
         <li><a href="https://bootadmin.net/demo/icons"><i class="fa fa-fw fa-flag"></i> Icons</a></li>
     </ul>
 </div>
