--- a/toolproject/src/app/toolmanagement/components/navbar/navbar.component.html
+++ b/toolproject/src/app/toolmanagement/components/navbar/navbar.component.html
@@ -7,8 +7,8 @@
             <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-envelope"></i> 5</a></li>
             <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-bell"></i> 3</a></li>
             <li class="nav-item dropdown">
-                <a href="#" id="dd_user" class="nav-link dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-user"
-                        ></i>
+                <a href="#" id="dd_user" class="nav-link dropdown-toggle" data-toggle="dropdown"><i
+                        class="fa fa-user"></i>
                     {{ UserLogin.mem_name }} {{ UserLogin.mem_sname }} {{ UserLogin.company_id }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd_user">
