Inprocess Async Validator

--- a/toolproject/src/app/toolmanagement/components/inventory/inventory.component.html
+++ b/toolproject/src/app/toolmanagement/components/inventory/inventory.component.html
@@ -31,7 +31,7 @@
                             <td>{{ item.bin }}</td>
                             <td>{{ item.qty_available }}</td>
                             <td>{{ item.tool_life_expiration  }}</td>
-                            <td>Tool Status</td>
+                            <td>{{ item.condition  }}</td>
                         </tr>
                     </tbody>
                 </table>
