--- a/toolproject/src/app/toolmanagement/components/loan/loan.component.html
+++ b/toolproject/src/app/toolmanagement/components/loan/loan.component.html
@@ -114,12 +114,12 @@
                                     <div class="col-md-6 mb-3">
                                         <label for="aircraft">Aircraft :</label>
                                         <input type="text" list="aircraftlist" name="aircraft" id="aircraft"
-                                            formControlName="aircraft" class="form-control"
+                                            formControlName="ac_reg" class="form-control"
                                             [ngClass]="{
-                                        'is-valid': form_header.get('aircraft').touched && form_header.get('aircraft').valid,
-                                        'is-invalid': form_header.get('aircraft').touched && form_header.get('aircraft').invalid}" [readonly]='isShow'>
+                                        'is-valid': form_header.get('ac_reg').touched && form_header.get('ac_reg').valid,
+                                        'is-invalid': form_header.get('ac_reg').touched && form_header.get('ac_reg').invalid}" [readonly]='isShow'>
                                         <div class="invalid-feedback">
-                                            <div *ngIf="form_header.get('aircraft').errors?.required">
+                                            <div *ngIf="form_header.get('ac_reg').errors?.required">
                                                  Workorder or Aircraft is Required.
                                             </div>
                                         </div>
