--- a/toolproject/src/app/toolmanagement/components/tm-content/tm-content.component.html
+++ b/toolproject/src/app/toolmanagement/components/tm-content/tm-content.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 <div class="d-flex">
-    <app-sidebar></app-sidebar>
-    <ng-content></ng-content>
+    <app-sidebar class="d-flex"></app-sidebar>
+    <ng-content class="d-flex"></ng-content>
 </div>
