--- a/toolproject/src/app/toolmanagement/components/inventory/inventory.component.html
+++ b/toolproject/src/app/toolmanagement/components/inventory/inventory.component.html
@@ -1,9 +1,30 @@
 <app-tm-content>
     <div class="content p-4">
+        <div class="row">
+            <div class="col-6">
+                <h2 class="mb-4">Inventory</h2>
+            </div>
+            <div class="col-6">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <button class="btn btn-outline-primary dropdown-toggle" type="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">{{ searchType.value }}</button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" (click)="searchType = item" *ngFor="let item of searchTypeItems">
+                                {{ item.value }}
+                            </a>
+                        </div>
+                    </div>
+                    <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                        [(ngModel)]="seachText">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-primary" type="button" (click)='onSearchItem()'><i class="fa fa-fw fa-search"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        <h2 class="mb-4">Inventory</h2>
-
-        <div class="card mb-4">
+        <div class="row card mb-4">
             <div class="card-body">
                 <table class="table table-hover" cellspacing="0" width="100%">
                     <thead>
@@ -30,7 +51,7 @@
                             <td>{{ item.location }}</td>
                             <td>{{ item.bin }}</td>
                             <td>{{ item.qty_available }}</td>
-                            <td>{{ item.tool_life_expiration  }}</td>
+                            <td>{{ item.tool_life_expiration }}</td>
                             <td>{{ item.condition  }}</td>
                         </tr>
                     </tbody>
