Implement Search at InventoryComp

--- a/toolproject/src/app/toolmanagement/components/inventory/inventory.component.html
+++ b/toolproject/src/app/toolmanagement/components/inventory/inventory.component.html
@@ -15,7 +15,7 @@
                             </a>
                         </div>
                     </div>
-                    <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                    <input type="text" class="form-control text-uppercase" aria-label="Text input with dropdown button"
                         [(ngModel)]="seachText">
                     <div class="input-group-append">
                         <button class="btn btn-outline-primary" type="button" (click)='onSearchItem()'><i class="fa fa-fw fa-search"></i></button>
